--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^10.2.4",
     "electron": "^17.1.2",
