--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production",
-    "start": "electron ."
+    "start:dev:main": "concurrently \"nodemon\" \"webpack --mode=development --config-name=main --watch\"",
+    "start:dev:renderer": "echo not implemented yet",
+    "start": "concurrently \"npm run start:dev:main\" \"npm run start:dev:renderer\""
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -17,6 +19,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "babel-loader": "^8.2.3",
+    "concurrently": "^7.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "electron": "^17.1.2",
     "electron-builder": "^22.14.13",
