--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "dist/main.js",
   "scripts": {
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production",
+    "build": "webpack --mode=production",
+    "start": "concurrently \"npm run start:dev:main\" \"npm run start:dev:renderer\" \"npm run start:dev:preload\"",
     "start:dev:main": "concurrently \"nodemon\" \"webpack --mode=development --config-name=main --watch\"",
-    "start:dev:renderer": "echo not implemented yet",
-    "start": "concurrently \"npm run start:dev:main\" \"npm run start:dev:renderer\""
+    "start:dev:preload": "webpack --mode=development --config-name=preload --watch",
+    "start:dev:renderer": "webpack serve --mode=development --config-name=renderer"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -18,6 +18,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "@types/webpack-node-externals": "^2.5.3",
     "babel-loader": "^8.2.3",
     "concurrently": "^7.0.0",
     "copy-webpack-plugin": "^10.2.4",
@@ -28,6 +29,11 @@
     "ts-loader": "^9.2.8",
     "ts-node": "^10.7.0",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "webpack-node-externals": "^3.0.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.0"
   }
 }
